# DSCI-599-project

./: .gitignore  README.md  pcap_to_csv.py  preprocessing_bins.py  pyproject.toml  requirements.txt
data/: datasets.db
data/pickle_files/: hdumb_3_false_bins1.pkl  hdumb_3_false_bins2.pkl  hdumb_3_false_bins3.pkl  hdumb_3_false_bins4.pkl  hdumb_3_false_bins5.pkl  hdumb_3_false_bins6.pkl  hdumb_5_false_bins1.pkl  hdumb_5_false_bins2.pkl  hdumb_5_false_bins3.pkl  hdumb_5_false_bins4.pkl  hdumb_5_false_bins5.pkl  hdumb_5_false_bins6.pkl  hdumb_8_false_bins1.pkl  hdumb_8_false_bins2.pkl  hdumb_8_false_bins3.pkl  hdumb_8_false_bins4.pkl  hdumb_8_false_bins5.pkl  hdumb_8_false_bins6.pkl
data/samples/: preprocessed_data.csv  preprocessed_data2.csv  preprocessed_data_encrypted.csv  sample_ipsec.csv
notebook/: bayesian_networks.ipynb  network_graph.ipynb
notebook/experiments/: analysis.ipynb  analysis_encrypted.ipynb  analysis_unencrypted.ipynb  bayesian_network.ipynb  initial_eda.ipynb  pyagrum.ipynb  time_series_eda.ipynb
utils/: data_downloader.py  data_preprocessing.py  data_preprocessing_encrypted.py
