[tool.poetry]
name = "dsci599-project"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"
packages = [{include = "dsci599_project"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
scapy = "^2.5.0"
notebook = "^7.1.3"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
statsmodels = "^0.14.2"
scipy = "^1.13.0"
networkx = "^3.3"
pgmpy = "^0.1.25"
pyagrum = "^1.13.2"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
